--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -15,10 +15,7 @@
     <div class="col-lg-5 pl-lg-5 pb-3 py-lg-5">
       <form action="/register" method="POST" id="registration-form">
 
-        <!-- Add flash message through EJS template -->
-        <% regErrors.forEach((message) => { %>
-          <div class="alert alert-danger small"><%= message %></div>
-        <% }); %>
+        <%- include("includes/flash") %>
 
           <div class="form-group">
             <label for="username-register" class="text-muted mb-1"><small>Username</small></label>
